<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Titulo"
            android:gravity="center_horizontal"
            android:textSize="30dp"
            android:textColor="@color/black"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_horizontal"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:id="@+id/tvResultado"
    />
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/resistencia"
    />
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:text="@string/banda_1"
                android:gravity="center"
                android:textColor="@color/black"/>
        <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:text="@string/banda_2"
                android:gravity="center"
                android:textColor="@color/black"
        />
        <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:text="@string/banda_3"
                android:gravity="center"
                android:textColor="@color/black"
        />
        <TextView
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:text="@string/tolerancia"
                android:gravity="center"
                android:textColor="@color/black"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    >

        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="120dp"
                android:background="@color/black"
                android:id="@+id/btblack_2band"
                android:onClick="actualizar"

        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/black"
                android:id="@+id/btblack_3band"
                android:onClick="actualizar"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/saddlebrown"
                android:id="@+id/btbrown_1band"
                android:onClick="actualizar"
        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/saddlebrown"
                android:id="@+id/btbrown_2band"
                android:onClick="actualizar"
        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/saddlebrown"
                android:id="@+id/btbrown_3band"
                android:onClick="actualizar"
        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/saddlebrown"
                android:id="@+id/btbrown_tolband"
                android:onClick="actualizar"

        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/red"
                android:id="@+id/btred_1band"
                android:onClick="actualizar"
        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/red"
                android:id="@+id/btred_2band"
                android:onClick="actualizar"

        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/red"
                android:id="@+id/btred_3band"
                android:onClick="actualizar"
        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/red"
                android:id="@+id/btred_tolband"
                android:onClick="actualizar"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/orangered"
                android:id="@+id/btorange_1band"
                android:onClick="actualizar"

        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/orangered"
                android:id="@+id/btorange_2band"
                android:onClick="actualizar"
        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/orangered"
                android:id="@+id/btorange_3band"
                android:onClick="actualizar"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/yellow"
                android:id="@+id/btyellow_1band"
                android:onClick="actualizar"

        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/yellow"
                android:id="@+id/btyellow_2band"
                android:onClick="actualizar"
        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/yellow"
                android:id="@+id/btyellow_3band"
                android:onClick="actualizar"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/limegreen"
                android:id="@+id/btgreen_1band"
                android:onClick="actualizar"

        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/limegreen"
                android:id="@+id/btgreen_2band"
                android:onClick="actualizar"
        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/limegreen"
                android:id="@+id/btgreen_3band"
                android:onClick="actualizar"

        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/limegreen"
                android:id="@+id/btgreen_tolband"
                android:onClick="actualizar"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/midnightblue"
                android:id="@+id/btblue_1band"
                android:onClick="actualizar"

        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/midnightblue"
                android:id="@+id/btblue_2band"
                android:onClick="actualizar"

        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/midnightblue"
                android:id="@+id/btblue_3band"
                android:onClick="actualizar"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/purple"
                android:id="@+id/btpurple_1band"
                android:onClick="actualizar"

        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/purple"
                android:id="@+id/btpurple_2band"
                android:onClick="actualizar"

        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/purple"
                android:id="@+id/btpurple_3band"
                android:onClick="actualizar"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/gray"
                android:id="@+id/btgray_1band"
                android:onClick="actualizar"

        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/gray"
                android:id="@+id/btgray_2band"
                android:onClick="actualizar"
        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/gray"
                android:id="@+id/btgray_3band"
                android:onClick="actualizar"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/beige"
                android:id="@+id/btwhite_1band"
                android:onClick="actualizar"

        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/beige"
                android:id="@+id/btwhite_2band"
                android:onClick="actualizar"
        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/beige"
                android:id="@+id/btwhite_3band"
                android:onClick="actualizar"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="220dp"
                android:background="@color/goldenrod"
                android:id="@+id/btgold_3band"
                android:onClick="actualizar"

        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/goldenrod"
                android:id="@+id/btgold_tolband"
                android:onClick="actualizar"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="220dp"
                android:background="@color/silver"
                android:id="@+id/btsilver_3band"
                android:onClick="actualizar"
        />
        <Button
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginStart="40dp"
                android:background="@color/silver"
                android:id="@+id/btsilver_tolband"
                android:onClick="actualizar"

        />

    </LinearLayout>




</LinearLayout>